# PDF_Parser

./: .env.dev  README.md  pyproject.toml
pdf_parser/src/config/: settings.py
pdf_parser/src/models/: paper_exam_models.py
pdf_parser/src/modules/: connect.py  convert_pdf2base64.py  generate.py  import_.py  logger_config.py
pdf_parser/src/prompt_collections/: collection_01.json
scripts/: convert_pdf2base64.py  pipeline.py  preview_questions.py  test_connection.ipynb  test_generate_response.ipynb  test_import.py
