[tool.poetry]
name = "pdf-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pdf_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.34.0"
pydantic-settings = "^2.3.2"
streamlit = "1.32.2"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
mistune = "^3.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
requests-mock = "^1.12.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
